--- a/HTML/Pixelworld.html
+++ b/HTML/Pixelworld.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/Home_page.css">
-    <link rel="stylesheet" href="/IMG/LOGO/styles.css">
-    <link rel="Shortcut icon" href="/IMG/ICON/PIXEL_ICON.jpg">
+    <link rel="stylesheet" href="../CSS/PixelArt.css">
+    <link rel="stylesheet" href="../IMG/LOGO/styles.css">
+    <link rel="Shortcut icon" href="../IMG/ICON/PIXEL_ICON.ico">
     <title>Pixelworld</title>
 </head>
 <body>
@@ -28,9 +28,9 @@
                 </div>
                 <img style="width:150px; margin-left: 240px; margin-top: 5px;" src="/IMG/LOGO/Logo_2-removebg-preview.png" alt="Pixelworld">
                 <nav class="menu">
-                    <a href="/HTML/Pixelworld.html">Inicio</a>
-				    <a href="/HTML/PixelArt.html">PixelArts</a>
-				    <a href="/HTML/Game_page.html">Pixel Games</a>
+                    <a href="./Pixelworld.html">Inicio</a>
+				    <a href="./PixelArt.html">PixelArts</a>
+				    <a href="./Game_page.html">Pixel Games</a>
 				    <a href="mailto:brandonstanlyv@gmail.com">Contactanos!</a><div><br><br><br></div>
                     <div class="Buscador">
                         <div class="autocomplete">
@@ -102,15 +102,15 @@
         <div class="cont-menu">
             <label for="btn-menu">X</label>
             <nav>
-                <img style="width:300px; margin-left: -20px; margin-top: -50px" src="/IMG/LOGO/IMG_0672.png" alt="">
-                <a href="/HTML/Pixelworld.html">Inicio</a>
-                <a href="#" id="account">Cuenta</a><script src="/JAVA/Alert.js"></script>
-                <a href="/HTML/Game_page.html">Pixel Games</a>
-                <a href="/HTML/PixelArt.html">PixelArts</a>
-                <a href="/HTML/Login.html">Cerrar sesion</a>
+                <img style="width:300px; margin-left: -20px; margin-top: -50px" src="../IMG/LOGO/IMG_0672.png" alt="">
+                <a href="./Pixelworld.html">Inicio</a>
+                <a href="#" id="account">Cuenta</a><script src="../JAVA/Alert.js"></script>
+                <a href="./Game_page.html">Pixel Games</a>
+                <a href="./PixelArt.html">PixelArts</a>
+                <a href="./Login.html">Cerrar sesion</a>
                 <a href="mailto:brandonstanlyv@gmail.com">Enviar comentarios</a>
-                <a href="https://www.facebook.com/bradonstanlyventura/about" target="_blank"><img width="30px" src="/IMG/LOGO/Facebook_logo.png" alt=""> Facebook</a>
-                <a href="https://twitter.com/TeamFocking" target="_blank"><img width="30px" src="/IMG/LOGO/Twitter_logo.png" alt=""> Twitter</a>
+                <a href="https://www.facebook.com/bradonstanlyventura/about" target="_blank"><img width="30px" src="../IMG/LOGO/Facebook_logo.png" alt=""> Facebook</a>
+                <a href="https://twitter.com/TeamFocking" target="_blank"><img width="30px" src="../IMG/LOGO/Twitter_logo.png" alt=""> Twitter</a>
             </nav>
         </div>
     </div>
@@ -121,10 +121,10 @@
             <br>
             <table border="0" width="700px" align="center" class="catalogo" cellspacing="10">
                 <tr>
-                    <td><a id="Blasphemous" href="/Games/Gampa_page/Blasphemous.html" target="_blank"><img style="height:390px; width:250px;" src="/IMG_GAME/Blasphemous.jpg" alt="Blasphemous" title="Click aqui para descargar Blasphemous!"></a></td>
-                    <td><a href="/Games/Gampa_page/Moonlighter.html" target="_blank"><img style="height:390px; width:250px;" src="/IMG_GAME/MoonlighterAdventure.jpg" alt="Moonlighter Adventure" title="Click aqui para descargar Moonlighter Adventure!"></a></td>
-                    <td><a href="/Games/Gampa_page/Celeste.html" target="_blank"><img style="height:390px; width:250px;" src="/IMG_GAME/Celeste.png" alt="Celeste" title="Click aqui para descargar Celeste!"></a></td>
-                    <td><a href="/Games/Gampa_page/CoffeTalk.html" target="_blank"><img style="height:390px; width:250px;" src="/IMG_GAME/CoffeeTalk.jpg" alt="Coffe Talk" title="Click aqui para descargar Coffe Talk!"></a></td>
+                    <td><a id="Blasphemous" href="../Games/Gampa_page/Blasphemous.html" target="_blank"><img style="height:390px; width:250px;" src="../IMG_GAME/Blasphemous.jpg" alt="Blasphemous" title="Click aqui para descargar Blasphemous!"></a></td>
+                    <td><a href="../Games/Gampa_page/Moonlighter.html" target="_blank"><img style="height:390px; width:250px;" src="../IMG_GAME/MoonlighterAdventure.jpg" alt="Moonlighter Adventure" title="Click aqui para descargar Moonlighter Adventure!"></a></td>
+                    <td><a href="../Games/Gampa_page/Celeste.html" target="_blank"><img style="height:390px; width:250px;" src="../IMG_GAME/Celeste.png" alt="Celeste" title="Click aqui para descargar Celeste!"></a></td>
+                    <td><a href="../Games/Gampa_page/CoffeTalk.html" target="_blank"><img style="height:390px; width:250px;" src="../IMG_GAME/CoffeeTalk.jpg" alt="Coffe Talk" title="Click aqui para descargar Coffe Talk!"></a></td>
                 </tr>
                 <tr align="center">
                     <td><a style="color:white; text-decoration: none;" href="https://exe.io/Y9ruxV" target="_blank">Blasphemous</a></td>
@@ -133,10 +133,10 @@
                     <td><a style="color:white; text-decoration: none;" href="https://exe.io/Bbvxkc" target="_blank">Coffee Talk</td></a>
                 </tr>
                 <tr border="0" width="700px" align="center">
-                    <td><a href="/Games/Gampa_page/Owlboy.html" target="_blank"><img style="height:390px; width:250px;" src="/IMG_GAME/Owlboy.jpg" alt="Owlboy" title="Click aqui para descargar Owlboy!"></a></td>
-                    <td><a href="/Games/Gampa_page/KatanaZero.html" target="_blank"><img style="height:390px; width:250px;" src="/IMG_GAME/KatanaZero.jpg" alt="Katana ZERO" title="Click aqui para descargar Katana Zero!"></a></td>
-                    <td><a href="/Games/Gampa_page/StardewValley.html" target="_blank"><img style="height:390px; width:250px;" src="/IMG_GAME/StardewValley.jpg" alt="Stardew Valley" title="Click aqui para descargar Stardew Valley!"></a></td>
-                    <td><a href="/Games/Gampa_page/DeadCells.html" target="_blank"><img style="height:390px; width:250px;" src="/IMG_GAME/DeadCells.jpg" alt="Dead Cells" title="Click aqui para descargar Dead Cells!"></a></td>
+                    <td><a href="../Games/Gampa_page/Owlboy.html" target="_blank"><img style="height:390px; width:250px;" src="../IMG_GAME/Owlboy.jpg" alt="Owlboy" title="Click aqui para descargar Owlboy!"></a></td>
+                    <td><a href="../Games/Gampa_page/KatanaZero.html" target="_blank"><img style="height:390px; width:250px;" src="../IMG_GAME/KatanaZero.jpg" alt="Katana ZERO" title="Click aqui para descargar Katana Zero!"></a></td>
+                    <td><a href="../Games/Gampa_page/StardewValley.html" target="_blank"><img style="height:390px; width:250px;" src="../IMG_GAME/StardewValley.jpg" alt="Stardew Valley" title="Click aqui para descargar Stardew Valley!"></a></td>
+                    <td><a href="../Games/Gampa_page/DeadCells.html" target="_blank"><img style="height:390px; width:250px;" src="../IMG_GAME/DeadCells.jpg" alt="Dead Cells" title="Click aqui para descargar Dead Cells!"></a></td>
                 </tr>
                 <tr align="center">
                     <td><a style="color:white; text-decoration: none;" href="https://exe.io/tU2Wpe" target="_blank">Owlboy</a></td>
@@ -145,10 +145,10 @@
                     <td><a style="color:white; text-decoration: none;" href="https://exe.io/KO3q7f" target="_blank">Dead Cells</a></td>
                 </tr>
                 <tr border="0" width="700px" align="center">
-                    <td><a href="/Games/Gampa_page/Undertale.html" target="_blank"><img style="height:390px; width:250px;" src="/IMG_GAME/undertale.webp" alt="undertale" title="Click aqui para descargar Undertale!"></a></td>
-                    <td><a href="/Games/Gampa_page/HyperLight.html" target="_blank"><img style="height:390px; width:250px;" src="/IMG_GAME/HyperLight.png" alt="Hyper Light Drifter" title="Click aqui para descargar Hyper Light Drifter!"></a></td>
-                    <td><a href="/Games/Gampa_page/TheMessenger.html" target="_blank"><img style="height:390px; width:250px;" src="/IMG_GAME/TheMessenger.jpg" alt="The Messenger" title="The Messenger"></a></td>
-                    <td><a href="/Games/Gampa_page/HollowKnight.html" target="_blank"><img style="height:390px; width:250px;" src="/IMG_GAME/HollowKnight.webp" alt="Hollow Knight" title="Click aqui para descargar Hollow Knight!"></a></td>
+                    <td><a href="../Games/Gampa_page/Undertale.html" target="_blank"><img style="height:390px; width:250px;" src="../IMG_GAME/undertale.webp" alt="undertale" title="Click aqui para descargar Undertale!"></a></td>
+                    <td><a href="../Games/Gampa_page/HyperLight.html" target="_blank"><img style="height:390px; width:250px;" src="../IMG_GAME/HyperLight.png" alt="Hyper Light Drifter" title="Click aqui para descargar Hyper Light Drifter!"></a></td>
+                    <td><a href="../Games/Gampa_page/TheMessenger.html" target="_blank"><img style="height:390px; width:250px;" src="../IMG_GAME/TheMessenger.jpg" alt="The Messenger" title="The Messenger"></a></td>
+                    <td><a href="../Games/Gampa_page/HollowKnight.html" target="_blank"><img style="height:390px; width:250px;" src="../IMG_GAME/HollowKnight.webp" alt="Hollow Knight" title="Click aqui para descargar Hollow Knight!"></a></td>
                 </tr>
                 <tr align="center">
                     <td><a href="https://exe.io/rEVUqneT" target="_blank"></a>Undertale</td>
@@ -161,7 +161,7 @@
     </div>
     <br>
     <br>
-    <center><a style="font-family: 'Montserrat Alternates', sans-serif; color: white; font-size: 20px;" href="/HTML/Game_page.html">ver mas juegos.</a></center>
+    <center><a style="font-family: 'Montserrat Alternates', sans-serif; color: white; font-size: 20px;" href="../HTML/Game_page.html">ver mas juegos.</a></center>
     <br>
     <div class="Copy">&reg;Pixelworld &copy;2022 Stanvs_Dev</div> 
     <br>
