--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a href="/HTML/Login.html">¿Ya tienes una cuenta?</a>
             <br>
             <br>
-            <a style="font-size:15px;" href="./HTML/PixelArt.html">Continuar como Invitado</a>
+            <a style="font-size:15px;" href="./HTML/Pixelworld.html">Continuar como Invitado</a>
         </p>
     </div>
 </body>
