--- a/HTML/PixelArt.html
+++ b/HTML/PixelArt.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/PixelArt.css">
-    <link rel="stylesheet" href="/IMG/LOGO/styles.css">
-    <link rel="Shortcut icon" href="/IMG/ICON/PIXEL_ICON.jpg">
+    <link rel="stylesheet" href="../CSS/PixelArt.css">
+    <link rel="stylesheet" href="../IMG/LOGO/styles.css">
+    <link rel="Shortcut icon" href="../IMG/ICON/PIXEL_ICON.ico">
     <title>PixelArts</title>
 </head>
 <body>
@@ -26,11 +26,11 @@
                 <div class="logo">
                     <h1>Welcome to Pixelworld</h1>
                 </div>
-                <img style="width:150px; margin-left: 240px; margin-top: 5px;" src="/IMG/LOGO/Logo_2-removebg-preview.png" alt="Pixelworld">
+                <img style="width:150px; margin-left: 240px; margin-top: 5px;" src="../IMG/LOGO/Logo_2-removebg-preview.png" alt="Pixelworld">
                 <nav class="menu">
-                    <a href="/HTML/Pixelworld.html">Inicio</a>
-				    <a href="/HTML/PixelArt.html">PixelArts</a>
-				    <a href="/HTML/Game_page.html">Pixel Games</a>
+                    <a href="./Pixelworld.html">Inicio</a>
+				    <a href="./PixelArt.html">PixelArts</a>
+				    <a href="./Game_page.html">Pixel Games</a>
 				    <a href="mailto:brandonstanlyv@gmail.com">Contactanos!</a><div><br><br><br></div>
                     <div class="Buscador">
                         <div class="autocomplete">
@@ -105,40 +105,40 @@
         <div class="cont-menu">
             <label for="btn-menu">X</label>
             <nav>
-                <img style="width:300px; margin-left: -20px; margin-top: -50px" src="/IMG/LOGO/IMG_0672.png" alt="">
-                <a href="/HTML/Pixelworld.html">Inicio</a>
-                <a href="#" id="account">Cuenta</a><script src="/JAVA/Alert.js"></script>
-                <a href="/HTML/Game_page.html">Pixel Games</a>
-                <a href="/HTML/PixelArt.html">PixelArts</a>
-                <a href="/HTML/Login.html">Cerrar sesion</a>
+                <img style="width:300px; margin-left: -20px; margin-top: -50px" src="../IMG/LOGO/IMG_0672.png" alt="">
+                <a href="./Pixelworld.html">Inicio</a>
+                <a href="#" id="account">Cuenta</a><script src="../JAVA/Alert.js"></script>
+                <a href="./Game_page.html">Pixel Games</a>
+                <a href="./PixelArt.html">PixelArts</a>
+                <a href="./Login.html">Cerrar sesion</a>
                 <a href="mailto:brandonstanlyv@gmail.com">Enviar comentarios</a>
-                <a href="https://www.facebook.com/bradonstanlyventura/about" target="_blank"><img width="30px" src="/IMG/LOGO/Facebook_logo.png" alt=""> Facebook</a>
-                <a href="https://twitter.com/TeamFocking" target="_blank"><img width="30px" src="/IMG/LOGO/Twitter_logo.png" alt=""> Twitter</a>
+                <a href="https://www.facebook.com/bradonstanlyventura/about" target="_blank"><img width="30px" src="../IMG/LOGO/Facebook_logo.png" alt=""> Facebook</a>
+                <a href="https://twitter.com/TeamFocking" target="_blank"><img width="30px" src="../IMG/LOGO/Twitter_logo.png" alt=""> Twitter</a>
             </nav>
         </div>
     </div>
     <div class="container-page">
         <main>
             <article>
-                <a href="https://ibb.co/vxR1PYH" target="_blank"><img src="/IMG/Wallpaper/00001.png" alt="" class="wallpaper-img"></a>
-                <a href="https://postimg.cc/YvSBzzC2" target="_blank"><img src="/IMG/Wallpaper/00002.png" alt="" class="wallpaper-img"></a>
-                <a href="https://postimg.cc/nsbzRWjY" target="_blank"><img src="/IMG/Wallpaper/00003.jpg" alt="" class="wallpaper-img"></a>
-                <a href="https://postimg.cc/c6ms7HBm" target="_blank"><img src="/IMG/Wallpaper/00004.png" alt="" class="wallpaper-img"></a>
-                <a href="https://postimg.cc/9rkzT0ck" target="_blank"><img src="/IMG/Wallpaper/00005.jpg" alt="" class="wallpaper-img"></a>
-                <a href="https://postimg.cc/HJXmrsLb" target="_blank"><img src="/IMG/Wallpaper/00006.jpg" alt="" class="wallpaper-img"></a>
-                <a href="https://postimg.cc/5Yft1FmX" target="_blank"><img src="/IMG/Wallpaper/00007.png" alt="" class="wallpaper-img"></a>
-                <a href="https://postimg.cc/9wtzZYFt" target="_blank"><img src="/IMG/Wallpaper/00008.png" alt="" class="wallpaper-img"></a>
-                <a href="https://postimg.cc/kBbT3VYN" target="_blank"><img src="/IMG/Wallpaper/00009.jpg" alt="" class="wallpaper-img"></a>
-                <a href="https://postimg.cc/ct4GkRBc" target="_blank"><img src="/IMG/Wallpaper/000010.jpg" alt="" class="wallpaper-img"></a>
-                <a href="https://postimg.cc/JGfdG3Hd" target="_blank"><img src="/IMG/Wallpaper/000011.jpg" alt="" class="wallpaper-img"></a>
-                <a href="https://postimg.cc/sG10ZwJb" target="_blank"><img src="/IMG/Wallpaper/000012.jpg" alt="" class="wallpaper-img"></a>
-                <a href="https://postimg.cc/QH9y8YCT" target="_blank"><img src="/IMG/Wallpaper/000013.jpg" alt="" class="wallpaper-img"></a>
-                <a href="https://postimg.cc/LqTyCrCr" target="_blank"><img src="/IMG/Wallpaper/000014.jpg" alt="" class="wallpaper-img"></a>
-                <a href="https://postimg.cc/jD6v2pbL" target="_blank"><img src="/IMG/Wallpaper/000015.jpg" alt="" class="wallpaper-img"></a>
+                <a href="https://ibb.co/vxR1PYH" target="_blank"><img src="../IMG/Wallpaper/00001.png" alt="" class="wallpaper-img"></a>
+                <a href="https://postimg.cc/YvSBzzC2" target="_blank"><img src="../IMG/Wallpaper/00002.png" alt="" class="wallpaper-img"></a>
+                <a href="https://postimg.cc/nsbzRWjY" target="_blank"><img src="../IMG/Wallpaper/00003.jpg" alt="" class="wallpaper-img"></a>
+                <a href="https://postimg.cc/c6ms7HBm" target="_blank"><img src="../IMG/Wallpaper/00004.png" alt="" class="wallpaper-img"></a>
+                <a href="https://postimg.cc/9rkzT0ck" target="_blank"><img src="../IMG/Wallpaper/00005.jpg" alt="" class="wallpaper-img"></a>
+                <a href="https://postimg.cc/HJXmrsLb" target="_blank"><img src="../IMG/Wallpaper/00006.jpg" alt="" class="wallpaper-img"></a>
+                <a href="https://postimg.cc/5Yft1FmX" target="_blank"><img src="../IMG/Wallpaper/00007.png" alt="" class="wallpaper-img"></a>
+                <a href="https://postimg.cc/9wtzZYFt" target="_blank"><img src="../IMG/Wallpaper/00008.png" alt="" class="wallpaper-img"></a>
+                <a href="https://postimg.cc/kBbT3VYN" target="_blank"><img src="../IMG/Wallpaper/00009.jpg" alt="" class="wallpaper-img"></a>
+                <a href="https://postimg.cc/ct4GkRBc" target="_blank"><img src="../IMG/Wallpaper/000010.jpg" alt="" class="wallpaper-img"></a>
+                <a href="https://postimg.cc/JGfdG3Hd" target="_blank"><img src="../IMG/Wallpaper/000011.jpg" alt="" class="wallpaper-img"></a>
+                <a href="https://postimg.cc/sG10ZwJb" target="_blank"><img src="../IMG/Wallpaper/000012.jpg" alt="" class="wallpaper-img"></a>
+                <a href="https://postimg.cc/QH9y8YCT" target="_blank"><img src="../IMG/Wallpaper/000013.jpg" alt="" class="wallpaper-img"></a>
+                <a href="https://postimg.cc/LqTyCrCr" target="_blank"><img src="../IMG/Wallpaper/000014.jpg" alt="" class="wallpaper-img"></a>
+                <a href="https://postimg.cc/jD6v2pbL" target="_blank"><img src="../IMG/Wallpaper/000015.jpg" alt="" class="wallpaper-img"></a>
             </article>
         </main>
     </div>
-    <center><a style="font-family: 'Montserrat Alternates', sans-serif; color: white; font-size: 20px;" href="/HTML/PixelArt_2.html">Siguiente</a></center>
+    <center><a style="font-family: 'Montserrat Alternates', sans-serif; color: white; font-size: 20px;" href="./PixelArt_2.html">Siguiente</a></center>
     <br>
     <div class="Copy">&reg;Pixelworld &copy;2022 Stanvs_Dev</div> 
     <br>
