--- a/HTML/Pixelworld.html
+++ b/HTML/Pixelworld.html
@@ -119,7 +119,7 @@
             <p>Juegos Agregados:</p>
             <br>
             <br>
-            <table border="0" width="700px" align="center" class="catalogo" cellspacing="10">
+            <table border="0" width="700px" align="center" class="catalogo" cellspacing="10" style="margin: 0 auto;">
                 <tr>
                     <td><a id="Blasphemous" href="../Games/Gampa_page/Blasphemous.html" target="_blank"><img style="height:390px; width:250px;" src="../IMG_GAME/Blasphemous.jpg" alt="Blasphemous" title="Click aqui para descargar Blasphemous!"></a></td>
                     <td><a href="../Games/Gampa_page/Moonlighter.html" target="_blank"><img style="height:390px; width:250px;" src="../IMG_GAME/MoonlighterAdventure.jpg" alt="Moonlighter Adventure" title="Click aqui para descargar Moonlighter Adventure!"></a></td>
