--- a/HTML/Pixelworld.html
+++ b/HTML/Pixelworld.html
@@ -26,7 +26,7 @@
                 <div class="logo">
                     <h1>Welcome to Pixelworld</h1>
                 </div>
-                <img style="width:150px; margin-left: 240px; margin-top: 5px;" src="/IMG/LOGO/Logo_2-removebg-preview.png" alt="Pixelworld">
+                <img style="width:150px; margin-left: 240px; margin-top: 5px;" src="../IMG/LOGO/Logo_2-removebg-preview.png" alt="Pixelworld">
                 <nav class="menu">
                     <a href="./Pixelworld.html">Inicio</a>
 				    <a href="./PixelArt.html">PixelArts</a>
@@ -40,28 +40,28 @@
                         <script>
                             // Lista de páginas
                             var pages = [
-                                { title: 'Blasphemous', url: '/Games/Gampa_page/Blasphemous.html' },
-                                { title: 'Celeste', url: '/Games/Gampa_page/Celeste.html' },
-                                { title: 'Chrono Trigger', url: '/Games/Gampa_page/ChronoTrigger.html' },
-                                { title: 'Coffe Talk', url: '/Games/Gampa_page/CoffeTalk.html' },
-                                { title: 'Dead Cells', url: '/Games/Gampa_page/DeadCells.html' },
-                                { title: 'Hollow Knight', url: '/Games/Gampa_page/HollowKnight.html' },
-                                { title: 'Hyper Light Drifter', url: '/Games/Gampa_page/HyperLight.html' },
-                                { title: 'Katana Zero', url: '/Games/Gampa_page/KatanaZero.html' },
-                                { title: 'Left 4 Dead', url: '/Games/Gampa_page/Left4Dead.html' },
-                                { title: 'Loop Hero', url: '/Games/Gampa_page/LoopHero.html' },
-                                { title: 'Moonlighter Adventure', url: '/Games/Gampa_page/Moonlighter.html' },
-                                { title: 'Owlboy', url: '/Games/Gampa_page/Owlboy.html' },
-                                { title: 'Paper Please', url: '/Games/Gampa_page/PaperPlease.html' },
-                                { title: 'RimWorld', url: '/Games/Gampa_page/RimWorld.html' },
-                                { title: 'Spore', url: '/Games/Gampa_page/Spore.html' },
-                                { title: 'Stardew Valley', url: '/Games/Gampa_page/StardewValley.html' },
-                                { title: 'Streets of Rogue', url: '/Games/Gampa_page/StreetsofRogue.html' },
-                                { title: 'Terraria', url: '/Games/Gampa_page/Terraria.html' },
-                                { title: 'The Messenger', url: '/Games/Gampa_page/TheMessenger.html' },
-                                { title: 'There Is No Game', url: '/Games/Gampa_page/ThereIsNoGame.html' },
-                                { title: 'Ultrakill', url: '/Games/Gampa_page/Ultrakill.html' },
-                                { title: 'Undertale', url: '/Games/Gampa_page/Undertale.html' },
+                                { title: 'Blasphemous', url: '../Games/Gampa_page/Blasphemous.html' },
+                                { title: 'Celeste', url: '../Games/Gampa_page/Celeste.html' },
+                                { title: 'Chrono Trigger', url: '../Games/Gampa_page/ChronoTrigger.html' },
+                                { title: 'Coffe Talk', url: '../Games/Gampa_page/CoffeTalk.html' },
+                                { title: 'Dead Cells', url: '../Games/Gampa_page/DeadCells.html' },
+                                { title: 'Hollow Knight', url: '../Games/Gampa_page/HollowKnight.html' },
+                                { title: 'Hyper Light Drifter', url: '../Games/Gampa_page/HyperLight.html' },
+                                { title: 'Katana Zero', url: '../Games/Gampa_page/KatanaZero.html' },
+                                { title: 'Left 4 Dead', url: '../Games/Gampa_page/Left4Dead.html' },
+                                { title: 'Loop Hero', url: '../Games/Gampa_page/LoopHero.html' },
+                                { title: 'Moonlighter Adventure', url: '../Games/Gampa_page/Moonlighter.html' },
+                                { title: 'Owlboy', url: '../Games/Gampa_page/Owlboy.html' },
+                                { title: 'Paper Please', url: '../Games/Gampa_page/PaperPlease.html' },
+                                { title: 'RimWorld', url: '../Games/Gampa_page/RimWorld.html' },
+                                { title: 'Spore', url: '../Games/Gampa_page/Spore.html' },
+                                { title: 'Stardew Valley', url: '../Games/Gampa_page/StardewValley.html' },
+                                { title: 'Streets of Rogue', url: '../Games/Gampa_page/StreetsofRogue.html' },
+                                { title: 'Terraria', url: '../Games/Gampa_page/Terraria.html' },
+                                { title: 'The Messenger', url: '../Games/Gampa_page/TheMessenger.html' },
+                                { title: 'There Is No Game', url: '../Games/Gampa_page/ThereIsNoGame.html' },
+                                { title: 'Ultrakill', url: '../Games/Gampa_page/Ultrakill.html' },
+                                { title: 'Undertale', url: '../Games/Gampa_page/Undertale.html' },
                             ];
                             var searchInput = document.getElementById('search-input');
                             var autocompleteList = document.getElementById('autocomplete-list');
